--- a/template/index.html
+++ b/template/index.html
@@ -2,10 +2,11 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>Your Favorite Source of Free Bootstrap Themes</h1>
+
+                <h1>2016年夏天·跟着Babymosh一起游瑞士</h1>
                 <hr>
-                <p>Start Bootstrap can help you build better websites using the Bootstrap CSS framework! Just download your template and start going, no strings attached!</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
+                <p>4-10岁宝贝  |  亲子同行  |  7日深度游  |  3-5个家庭私家小团 ​</p>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll">现在报名</a>
             </div>
         </div>
     </header>
@@ -14,10 +15,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">We've got what you need!</h2>
+                    <h2 class="section-heading">为什么加入Babymosh</h2>
                     <hr class="light">
-                    <p class="text-faded">Start Bootstrap has everything you need to get your new website up and running in no time! All of the templates and themes on Start Bootstrap are open source, free to download, and easy to use. No strings attached!</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl">Get Started!</a>
+                    <p class="text-faded">一句话：Babymosh提供自助游搞不定，传统旅行社不提供的<br/> ——好玩、好学、好吃的独特体验</p>
+                    <table class="frontpage-why">
+                    <tr><td class="why-big">自助游？</td><td class="why-small">提前预约麻烦、德语交流困难、参观看不懂<br/>做攻略、订酒店、查火车班次，费时费力的准备成本</td></tr>
+                    <tr><td class="why-big">传统旅行社跟团？</td><td class="why-small">七日十国？<br/>大巴时光和商店时光？</td></tr>
+                    <tr><td class="why-big">我想要：</td><td class="why-small">小朋友结伴一起玩<br/>学到更多、探索更多<br/>地道独特的深度体验<br/>贴心的旅途照顾、安全第一、轻松度假</td></tr>
+                    </table>
+                    <a href="#services" class="btn btn-default btn-xl">Get Started!</a>
                 </div>
             </div>
         </div>
@@ -27,39 +33,63 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">At Your Service</h2>
+                    <h2 class="section-heading">关于我们</h2>
                     <hr class="primary">
                 </div>
             </div>
         </div>
         <div class="container">
             <div class="row">
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <img src="img/avatar/nattier.jpg">
+                        <h3>陈敏 Nattier</h3>
+                        <p class="text-muted">定居瑞士卢塞恩，毕业于复旦大学，百度、华住酒店任产品设计师和用户体验负责人。2016年暑期团，全程亲自带团</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <img src="img/avatar/laura.jpg">
+                        <h3>史晓婧 Laura</h3>
+                        <p class="text-muted">任麦淘亲子游事业部总监，曾任湖州喜来登温泉度假酒店副总经理、罗客游学香港项目负责人</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <img src="img/avatar/ouou.png">
+                        <h3>鸥鸥</h3>
+                        <p class="text-muted">毕业于瑞士琉森HTMi酒店管理学校，在瑞士生活12年。精通德语、英语，还会法语、日语哦</p>
+                    </div>
+                </div>
+            </div>
+            <br/><br/><br/>
+            <div class="row">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-diamond wow bounceIn text-primary"></i>
-                        <h3>Sturdy Templates</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <img src="img/avatar/huangdaxia.jpg">
+                        <h3>黄大虾</h3>
+                        <p class="text-muted">在瑞16年经验的专业导游，也是家有二宝的超级奶爸</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-paper-plane wow bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Ready to Ship</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <img src="img/avatar/louis.jpg">
+                        <h3>Louis Palmer</h3>
+                        <p class="text-muted">全球太阳能车环游世界第一人，带你深入瑞士Entlebuch生物圈</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-newspaper-o wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>Up to Date</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                        <img src="img/avatar/yang.png">
+                        <h3>杨锦屏</h3>
+                        <p class="text-muted">台湾人，创办杨氏语言学校，在苏黎世超过10年</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
-                        <i class="fa fa-4x fa-heart wow bounceIn text-primary" data-wow-delay=".3s"></i>
-                        <h3>Made with Love</h3>
-                        <p class="text-muted">You have to make your websites with love these days!</p>
+                        <img src="img/avatar/chunlei.jpeg">
+                        <h3>李春雷</h3>
+                        <p class="text-muted">瑞士8位明星中文滑雪教练之一，目前已是铁力士山全年户外教练</p>
                     </div>
                 </div>
             </div>
