--- a/css/less/creative.less
+++ b/css/less/creative.less
@@ -79,6 +79,7 @@ aside {
     .sans-serif-font;
     .transition-all;
     .navbar-header .navbar-brand {
+        padding-top:5px;
         color: @theme-primary;
         .sans-serif-font;
         font-weight: 700;
@@ -223,6 +224,10 @@ header {
     }
     p {
         margin-bottom: 0;
+        padding: 0 20px;
+    }
+    img{
+        border-radius: 50%;
     }
 }
 
@@ -285,6 +290,30 @@ header {
 .call-to-action {
     h2 {
         margin: 0 auto 20px;
+    }
+}
+
+// other customized
+
+.frontpage-why{
+    width:100%;
+    padding: 30px;
+    display:block;
+    tr{
+        padding: 15px 0;
+    }
+    td{
+        width:50%;
+    }
+    .why-big{
+        text-align: right;
+        font-weight: bold;
+        font-size:20px;
+        padding-right:20px;
+    }
+    .why-small{
+        font-size:16px;
+        text-align: left;
     }
 }
 
