--- a/template/_template.html
+++ b/template/_template.html
@@ -57,10 +57,10 @@
                         <a href="/">首页</a>
                     </li>
                     <li>
-                        <a href="/">2016暑期游</a>
+                        <a href="/2016summer.html">2016暑期游</a>
                     </li>
                     <li>
-                        <a href="/">琉森短途</a>
+                        <a href="/luzern.html">琉森短途</a>
                     </li>
                     <li>
                         <a href="/">博客</a>
