--- a/template/luzern.html
+++ b/template/luzern.html
@@ -6,6 +6,7 @@
                 <h1>琉森，瑞士最美城市</h1>
                 <hr>
                 <p>半日、一日、两日。亲子游私家团 ​</p>
+                <a href="#about" class="btn btn-primary btn-xl page-scroll btn-action">立即报名</a>
             </div>
         </div>
     </header>
