--- a/css/creative.css
+++ b/css/creative.css
@@ -5,6 +5,7 @@ body {
 }
 body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+  font-size: 16px;
 }
 hr {
   border-color: #F05F40;
@@ -269,6 +270,9 @@ header .header-content .header-content-inner p {
 .call-to-action h2 {
   margin: 0 auto 20px;
 }
+footer {
+  padding: 20px 0;
+}
 .frontpage-why {
   width: 100%;
   padding: 30px;
@@ -312,9 +316,14 @@ header .header-content .header-content-inner p {
   background-size: cover;
   -o-background-size: cover;
   background-position: center;
-  background-image: url('../img/index/slow.png');
   text-align: center;
   color: white;
+}
+.img-bg .full-block {
+  background-color: rgba(255, 255, 255, 0.7);
+  color: #222;
+  padding: 40px;
+  text-align: left;
 }
 .text-primary {
   color: #F05F40;
