--- a/template/index.html
+++ b/template/index.html
@@ -196,7 +196,7 @@
             </div>
         </div>
     </section>
-    <section id="four" class="img-bg">
+    <section id="four" class="img-bg" style="background-image: url('img/index/slow.png')">
         <div class="container-fluid" >
             <div class="row">
                 <div class="col-lg-12 text-center">
