--- a/css/less/creative.less
+++ b/css/less/creative.less
@@ -154,6 +154,12 @@ aside {
     }
 }
 
+div.navbar-right{
+    padding-top:10px;
+    padding-right:20px;
+    
+}
+
 // Homepage Header
 
 header {
@@ -201,7 +207,7 @@ header {
                 margin-left: auto;
                 margin-right: auto;
                 p {
-                    font-size: 18px;
+                    font-size: 24px;
                     max-width: 80%;
                     margin-left: auto;
                     margin-right: auto;
@@ -301,6 +307,7 @@ header {
 // footer
 footer{
     padding: 20px 0;
+    font-style: 14px;
 }
 
 // other customized
