--- a/template/2016summer.html
+++ b/template/2016summer.html
@@ -124,7 +124,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
-				<h2>组出发时间</h2>
+				<h1>组团出发时间</h1>
 			</div>
 		</div>
 	</div>
