--- a/template/index.html
+++ b/template/index.html
@@ -159,10 +159,10 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">体验#3  Babymosh <span class="stress">百宝箱</span> 贴心省心</h2>
+                    <hr class="primary">
                     <p>上午下午各需要一次点心！补充体力、更可以边吃边吃懂瑞士哦</p>
                     <p>爸妈休息时，宝贝们就可以凑在一起玩简单的“dés”游戏（用石头、球、弹球或掷地球来玩）、瑞士纸牌雅斯、流行的桌面游戏——边玩也变懂瑞士，不是吗</p>
                     <p>百宝箱还准备了必要的药品，以备不时。</p>
-                    <hr class="primary">
                 </div>
             </div>
         </div>
@@ -211,7 +211,7 @@
                     是的，慢慢行，带着宝贝细细看<br/></p>
 
                     <p style="font-style: italic;">
-                    <h3>细节的行程设计</h3>：<br/>
+                    <h3>行程设计细节：</h3><br/>
                     每日车程不超过2小时<br/>
                     每到一处让大小宝贝充分享受的时间<br/>
                     午休时间的安排<br/>
