--- a/css/less/creative.less
+++ b/css/less/creative.less
@@ -157,7 +157,7 @@ aside {
 div.navbar-right{
     padding-top:10px;
     padding-right:20px;
-    
+
 }
 
 // Homepage Header
@@ -366,6 +366,11 @@ footer{
         padding:40px;
         text-align: left;
     }
+}
+
+.spacer{
+    display:block;
+    height:20px;
 }
 
 // Bootstrap Overrides
