--- a/template/index.html
+++ b/template/index.html
@@ -82,7 +82,7 @@
             </div>
         </div>
     </section>
-<!--
+
     <section id="two">
         <div class="container">
             <div class="row">
@@ -105,7 +105,7 @@
                     <h2 class="section-sub-heading">Babymosh 独家提供</h2>
                 </div>
             </div>
-            <br/><br/>
+            <div class="spacer"></div>
             <div class="row">
                 <div class="col-lg-2 col-md-3 text-center">
                     <div class="service-box">
@@ -153,7 +153,7 @@
         </div>
     </section>
 
-
+<!--
     <section id="three">
         <div class="container">
             <div class="row">
