--- a/css/creative.css
+++ b/css/creative.css
@@ -2,6 +2,7 @@ html,
 body {
   height: 100%;
   width: 100%;
+  overflow-x: hidden;
 }
 body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
@@ -49,7 +50,12 @@ p {
   color: rgba(255, 255, 255, 0.7);
 }
 section {
-  padding: 100px 0;
+  padding: 40px 0;
+}
+@media (min-width: 768px) {
+  section {
+    padding: 80px 0;
+  }
 }
 aside {
   padding: 50px 0;
