--- a/css/less/creative.less
+++ b/css/less/creative.less
@@ -6,7 +6,7 @@ html,
 body {
     height: 100%;
     width: 100%;
-
+    overflow-x: hidden;
 }
 
 body {
@@ -61,8 +61,12 @@ p {
     color: fade(white, 70%);
 }
 
+
 section {
-    padding: 100px 0;
+    padding: 40px 0;
+    @media (min-width: 768px) {
+        padding: 80px 0;
+    }
 }
 
 aside {
