ultimately fix the padding right problem

--- a/template/index.html
+++ b/template/index.html
@@ -85,6 +85,7 @@
 
     <section id="two">
         <div class="container">
+        
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">体验#2  我在旅行，我在<span class="stress">游戏</span>，我在<span class="stress">学习</span>！</h2>
@@ -92,19 +93,22 @@
                     <hr class="primary">
                 </div>
             </div>
+            
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 text-center">
-                    <img src="img/index/game.png">
+                    <img src="img/index/game.png" class="img-responsive">
                 </div>
                 <div class="col-lg-5 text-center">
-                    <img src="img/index/knowledge.png">
+                    <img src="img/index/knowledge.png" class="img-responsive">
                 </div>
             </div>
+            
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-sub-heading">Babymosh 独家提供</h2>
                 </div>
             </div>
+            
             <div class="spacer"></div>
             <div class="row">
                 <div class="col-lg-2 col-md-3 text-center">
@@ -149,7 +153,9 @@
                         <p class="text-muted">大小宝贝统统围坐一圈，或躺或靠，就是一起聊天！却是以后最回味的大家庭时光</p>
                     </div>
                 </div>
+
             </div>
+
         </div>
     </section>
 
@@ -289,4 +295,4 @@
             </div>
         </div>
     </section>
--->
+    
