--- a/template/index.html
+++ b/template/index.html
@@ -40,42 +40,42 @@
         </div>
         <div class="container-fluid">
             <div class="row index-one-box no-gutter">
-                <div class="col-lg-4 col-sm-6"  data-wow-delay="0.1s">
+                <div class="col-lg-4 col-md-4 col-sm-12"  data-wow-delay="0.1s">
                     <img src="img/index/camping.jpg" class="img-responsive" alt="">
                 </div>
-                <div class="col-lg-4 col-sm-12 text-center" data-wow-delay="0.2s">
+                <div class="col-lg-4 col-md-4 col-sm-12 text-center" data-wow-delay="0.2s">
                     <h3>山间Party + 高山BBQ</h3>
                     <h4>音乐起，派对开始！像瑞士人一样拿把军刀削树枝、插起香肠上火烤；给宝贝画个小猫脸，游戏疯玩——这里绝没有旅行团</h4>
                 </div>
-                <div class="col-lg-4 col-sm-6" data-wow-delay="0.3s">
+                <div class="col-lg-4 col-md-4 col-sm-12" data-wow-delay="0.3s">
                     <img src="img/index/game.jpg" class="img-responsive" alt="">
                 </div>
             </div>
         </div>
         <div class="container-fluid">
             <div class="row index-one-box no-gutter">
-                <div class="col-lg-4 col-sm-12 text-center" data-wow-delay="0.4s" >
+                <div class="col-lg-4 col-md-4 col-sm-12 text-center" data-wow-delay="0.4s" >
                     <h3>湖边Camping + 沙滩Picnic</h3>
                     <h4>沙滩、泳池、草地、湖水，房车露营，推门就是整个世界</h4>
                 </div>
-                <div class="col-lg-4 col-sm-6" data-wow-delay="0.5s">
+                <div class="col-lg-4 col-md-4 col-sm-12" data-wow-delay="0.5s">
                     <img src="img/index/swim.jpg" class="img-responsive" alt="">
                 </div>
-                <div class="col-lg-4 col-sm-6" data-wow-delay="0.6s">
+                <div class="col-lg-4 col-md-4 col-sm-12" data-wow-delay="0.6s">
                     <img src="img/index/draw.jpg" class="img-responsive" alt="">
                 </div>
             </div>
         </div>
         <div class="container-fluid">
             <div class="row index-one-box no-gutter">
-                <div class="col-lg-4 col-sm-6" data-wow-delay="0.7s">
+                <div class="col-lg-4 col-md-4 col-sm-12" data-wow-delay="0.7s">
                     <img src="img/index/hiking.jpg" class="img-responsive" alt="">
                 </div>
-                <div class="col-lg-4 col-sm-12 text-center" data-wow-delay="0.8s">
+                <div class="col-lg-4 col-md-4 col-sm-12 text-center" data-wow-delay="0.8s">
                     <h3>阿尔卑斯Hiking + 农舍Farming</h3>
                     <h4>来瑞士不Hiking？用1、2个小时无难度的徒步深入阿尔卑斯，体验真正的瑞士吧！偶遇山坡晒太阳的奶牛、吃草的山羊；再绕道拜访瑞士农场，近距离接触小马小猪小羊小鸡们，尝尝自家的奶酪、鸡蛋、果汁……</h4>
                 </div>
-                <div class="col-lg-4 col-sm-6" data-wow-delay="0.9s">
+                <div class="col-lg-4 col-md-4 col-sm-12" data-wow-delay="0.9s">
                     <img src="img/index/farm.jpg" class="img-responsive" alt="">
                 </div>
                 
@@ -95,10 +95,10 @@
             </div>
             
             <div class="row">
-                <div class="col-lg-5 col-lg-offset-1 text-center">
+                <div class="col-lg-5 col-lg-offset-1 col-md-6 col-sm-6 text-center">
                     <img src="img/index/game.png" class="img-responsive">
                 </div>
-                <div class="col-lg-5 text-center">
+                <div class="col-lg-5 col-md-6 col-sm-6 text-center">
                     <img src="img/index/knowledge.png" class="img-responsive">
                 </div>
             </div>
@@ -111,42 +111,42 @@
             
             <div class="spacer"></div>
             <div class="row">
-                <div class="col-lg-2 col-md-3 text-center">
+                <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-book wow bounceIn text-primary"></i>
                         <h3>宝贝旅行书</h3>
                         <p class="text-muted">独家出品，图文结合，最适合行前亲子共读</p>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-3 text-center">
+                <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-send wow bounceIn text-primary" data-wow-delay="0.2s"></i>
                         <h3>我的旅行日志</h3>
                         <p class="text-muted">可写可画，更可贴门票贴树叶，每天和小伙伴一起制作日志</p>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-3 text-center">
+                <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-hand-lizard-o wow bounceIn text-primary" data-wow-delay="0.4s"></i>
                         <h3>旅行好玩包</h3>
                         <p class="text-muted">贴纸、布偶、拼图、联线猜谜……丰富的材料包让宝贝随时忙碌起来，爸妈当然更省心</p>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-3 text-center">
+                <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-mortar-board wow bounceIn text-primary" data-wow-delay="0.6s"></i>
                         <h3>知识小课堂</h3>
                         <p class="text-muted">20余个小课堂模块，从吃到行，自然人文，无处不课堂</p>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-3 text-center">
+                <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-language wow bounceIn text-primary" data-wow-delay="0.8s"></i>
                         <h3>每日德语时间</h3>
                         <p class="text-muted">来到欧洲才能感受语言的多样性，小小外交家不妨练练嘴</p>
                     </div>
                 </div>
-                <div class="col-lg-2 col-md-3 text-center">
+                <div class="col-lg-2 col-md-4 col-sm-6 col-xs-12 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-coffee wow bounceIn text-primary" data-wow-delay="1s"></i>
                         <h3>每晚共聚时光</h3>
@@ -174,25 +174,25 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 text-center">
                     <div class="service-box">
                         <img src="img/index/food.jpg">
                         <h3>零嘴能量箱</h3>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 text-center">
                     <div class="service-box">
                         <img src="img/index/toy.jpg">
                         <h3>玩具探索箱</h3>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 text-center">
                     <div class="service-box">
                         <img src="img/index/tool.jpg">
                         <h3>绘本文具箱</h3>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-6 col-sm-6 col-xs-12 text-center">
                       <div class="service-box">
                         <img src="img/index/drug.jpg">
                         <h3>医药用品箱</h3>
@@ -240,21 +240,21 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-6 text-center">
+                <div class="col-lg-4 col-md-4 text-center">
                     <div class="service-box">
                         <img class="round-corner" src="img/avatar/nattier.jpg">
                         <h3>陈敏 Nattier</h3>
                         <p class="text-muted">定居瑞士卢塞恩，毕业于复旦大学，百度、华住酒店任产品设计师和用户体验负责人。2016年暑期团，全程亲自带团</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 text-center">
+                <div class="col-lg-4 col-md-4 text-center">
                     <div class="service-box">
                         <img class="round-corner" src="img/avatar/laura.jpg">
                         <h3>史晓婧 Laura</h3>
                         <p class="text-muted">任麦淘亲子游事业部总监，曾任湖州喜来登温泉度假酒店副总经理、罗客游学香港项目负责人</p>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 text-center">
+                <div class="col-lg-4 col-md-4 text-center">
                     <div class="service-box">
                         <img class="round-corner" src="img/avatar/ouou.jpg">
                         <h3>鸥鸥</h3>
@@ -262,30 +262,30 @@
                     </div>
                 </div>
             </div>
-            <br/><br/><br/>
+            <div class="spacer"></div>
             <div class="row">
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-3 text-center">
                     <div class="service-box">
                         <img class="round-corner" src="img/avatar/huangdaxia.jpg">
                         <h3>黄大虾</h3>
                         <p class="text-muted">在瑞16年经验的专业导游，也是家有二宝的超级奶爸</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-3 text-center">
                     <div class="service-box">
                         <img class="round-corner" src="img/avatar/louis.jpg">
                         <h3>Louis Palmer</h3>
                         <p class="text-muted">全球太阳能车环游世界第一人，带你深入瑞士Entlebuch生物圈</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-3 text-center">
                     <div class="service-box">
                         <img class="round-corner" src="img/avatar/yang.png">
                         <h3>杨锦屏</h3>
                         <p class="text-muted">台湾人，创办杨氏语言学校，在苏黎世超过10年</p>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 text-center">
+                <div class="col-lg-3 col-md-3 text-center">
                     <div class="service-box">
                         <img class="round-corner" src="img/avatar/chunlei.jpeg">
                         <h3>李春雷</h3>
