--- a/css/creative.css
+++ b/css/creative.css
@@ -209,6 +209,13 @@ header .header-content .header-content-inner p {
 .section-heading {
   margin-top: 0;
 }
+.section-left-heading {
+  font-size: 26px;
+  padding: 40px 0 30px 0;
+}
+.section-left-heading span {
+  vertical-align: bottom;
+}
 .section-sub-heading {
   color: #666;
 }
@@ -338,6 +345,14 @@ footer {
 .spacer {
   display: block;
   height: 20px;
+}
+.about-row .row {
+  padding-top: 40px;
+}
+@media (max-width: 768px) {
+  .about-row .row {
+    padding-top: 10px;
+  }
 }
 .text-primary {
   color: #F05F40;
