--- a/css/less/creative.less
+++ b/css/less/creative.less
@@ -229,6 +229,14 @@ header {
     margin-top: 0;
 }
 
+.section-left-heading{
+    font-size:26px;
+    padding: 40px 0 30px 0;
+    span{
+        vertical-align: bottom;
+    }
+}
+
 .section-sub-heading{
     color: @theme-grey;
 }
@@ -374,6 +382,15 @@ footer{
 .spacer{
     display:block;
     height:20px;
+}
+
+.about-row{
+    .row{
+        padding-top:40px;
+        @media (max-width: 768px) {
+            padding-top:10px;
+        }
+    }
 }
 
 // Bootstrap Overrides
