change bg of about

--- a/css/less/creative.less
+++ b/css/less/creative.less
@@ -209,6 +209,7 @@ header {
                 max-width: 1000px;
                 margin-left: auto;
                 margin-right: auto;
+                padding-top: 60px;
                 p {
                     font-size: 24px;
                     max-width: 80%;
@@ -388,7 +389,12 @@ footer{
     .row{
         padding-top:40px;
         @media (max-width: 768px) {
-            padding-top:10px;
+            padding-top:20px;
+        }
+    }
+    @media (max-width: 768px) {
+        img{
+            display:none;
         }
     }
 }
