--- a/template/about.html
+++ b/template/about.html
@@ -1,8 +1,7 @@
-<header class="sub-header">
+<header class="sub-header" style="background-image: url('img/about/background.jpg')">
     <div class="header-content">
         <div class="header-content-inner">
-
-            <h1>世界这么大，和宝贝牵手去看</h1>
+            <h1>世界这么大<br/>和宝贝牵手去看</h1>
             <hr>
             <p>旅行已经开始，你的目的地在哪？</p>
         </div>
@@ -40,7 +39,7 @@
  
 <p>用互联网思维来设计亲子旅行体验，更开放透明的信息，更多互动游戏的环节，把有趣的旅行育儿理念都实践起来。</p>
             </div>
-            <div class="col-md-3 col-md-offset-1 col-sm-4">
+            <div class="col-md-3 col-md-offset-1 col-sm-4 col-xs-12">
             	<img src="/img/about/nattiermax.jpg">
             </div>
         </div>
