--- a/css/creative.css
+++ b/css/creative.css
@@ -195,6 +195,7 @@ header .header-content .header-content-inner p {
     max-width: 1000px;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 60px;
   }
   header .header-content .header-content-inner p {
     font-size: 24px;
@@ -351,7 +352,12 @@ footer {
 }
 @media (max-width: 768px) {
   .about-row .row {
-    padding-top: 10px;
+    padding-top: 20px;
+  }
+}
+@media (max-width: 768px) {
+  .about-row img {
+    display: none;
   }
 }
 .text-primary {
