change form link

--- a/template/2016summer.html
+++ b/template/2016summer.html
@@ -1,16 +1,12 @@
 <header class="sub-header">
     <div class="header-content">
         <div class="header-content-inner">
-
             <h1>瑞士Central深度8天7晚·Babymosh亲子共游</h1>
-            <hr>
             <p>平价首发 限量席位</p>
+            <a href="http://form.mikecrm.com/f.php?t=2OAwew" target="_blank"  class="btn btn-primary btn-xl page-scroll btn-action">立刻报名</a>
         </div>
     </div>
 </header>
-
-
-
 
 <section class="img-bg no-padding" style="background-image: url('img/index/slow.png')">
 	<div class="container">
