--- a/template/index.html
+++ b/template/index.html
@@ -6,7 +6,7 @@
                 <h1>2016年夏天·跟着Babymosh一起游瑞士</h1>
                 <hr>
                 <p>4-10岁宝贝  |  亲子同行  |  7日深度游  |  3-5个家庭私家小团 ​</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll btn-action">正在报名中</a>
+                <a href="/2016summer.html" class="btn btn-primary btn-xl page-scroll btn-action">正在报名中</a>
             </div>
         </div>
     </header>
@@ -23,7 +23,6 @@
                     <tr class="wow fadeIn" data-wow-delay="0.4s"><td class="why-big">传统旅行社跟团？</td><td class="why-small">七日十国？<br/>大巴时光和商店时光？</td></tr>
                     <tr class="wow fadeIn" data-wow-delay="0.6s"><td class="why-big">我想要：</td><td class="why-small">小朋友结伴一起玩<br/>学到更多、探索更多<br/>地道独特的深度体验<br/>贴心的旅途照顾、安全第一、轻松度假</td></tr>
                     </table>
-                    <a href="#services" class="btn btn-default btn-xl">了解更多</a>
                 </div>
             </div>
         </div>
