--- a/css/creative.css
+++ b/css/creative.css
@@ -4,7 +4,7 @@ body {
   width: 100%;
 }
 body {
-  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Merriweather', 'Helvetica Neue', "Microsoft YaHei", "微软雅黑", STXihei, "华文细黑", Arial, sans-serif;
   font-size: 16px;
 }
 hr {
@@ -31,7 +31,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', "Microsoft YaHei", "微软雅黑", STXihei, "华文细黑", Arial, sans-serif;
 }
 p {
   font-size: 16px;
@@ -65,7 +65,7 @@ aside {
 .navbar-default {
   background-color: white;
   border-color: rgba(34, 34, 34, 0.05);
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', "Microsoft YaHei", "微软雅黑", STXihei, "华文细黑", Arial, sans-serif;
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
   transition: all 0.35s;
@@ -73,7 +73,7 @@ aside {
 .navbar-default .navbar-header .navbar-brand {
   padding-top: 5px;
   color: #F05F40;
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', "Microsoft YaHei", "微软雅黑", STXihei, "华文细黑", Arial, sans-serif;
   font-weight: 700;
   text-transform: uppercase;
 }
@@ -262,7 +262,7 @@ header .header-content .header-content-inner p {
 }
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', "Microsoft YaHei", "微软雅黑", STXihei, "华文细黑", Arial, sans-serif;
   padding: 0 15px;
 }
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
@@ -464,7 +464,7 @@ fieldset[disabled] .btn-primary.active {
   background-color: white;
 }
 .btn {
-  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Open Sans', 'Helvetica Neue', "Microsoft YaHei", "微软雅黑", STXihei, "华文细黑", Arial, sans-serif;
   border: none;
   border-radius: 300px;
   font-weight: 700;
