--- a/css/less/mixins.less
+++ b/css/less/mixins.less
@@ -55,9 +55,9 @@
 }
 
 .sans-serif-font() {
-	font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+	font-family: 'Open Sans', 'Helvetica Neue', "Microsoft YaHei", "微软雅黑", STXihei, "华文细黑", Arial, sans-serif;
 }
 
 .serif-font() {
-	font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
+	font-family: 'Merriweather', 'Helvetica Neue', "Microsoft YaHei", "微软雅黑", STXihei, "华文细黑", Arial, sans-serif; 
 }
