--- a/template/about.html
+++ b/template/about.html
@@ -1,4 +1,4 @@
-<header class="sub-header" style="background-image: url('img/about/background.jpg')">
+<header class="sub-header" style="background-image: url('/img/about/background.jpg')">
     <div class="header-content">
         <div class="header-content-inner">
             <h1>世界这么大<br/>和宝贝牵手去看</h1>
@@ -55,7 +55,7 @@
         </div>
         <div class="row">
             <div class="col-md-3 col-md-offset-1 col-sm-4">
-            	<img class="round-corner" src="img/avatar/nattier.jpg">
+            	<img class="round-corner" src="/img/avatar/nattier.jpg">
             </div>
             <div class="col-md-7 col-sm-8">
 				<h4>陈敏，Nattier</h4>
@@ -77,7 +77,7 @@
 
         <div class="row">
             <div class="col-md-3 col-md-offset-1 col-sm-4">
-            	<img class="round-corner" src="img/avatar/laura.jpg">
+            	<img class="round-corner" src="/img/avatar/laura.jpg">
             </div>
             <div class="col-md-7 col-sm-8">
             	<h4>史晓婧，Laura</h4>
@@ -89,7 +89,7 @@
 
         <div class="row">
             <div class="col-md-3 col-md-offset-1 col-sm-4">
-            	<img class="round-corner" src="img/avatar/ouou.jpg">
+            	<img class="round-corner" src="/img/avatar/ouou.jpg">
             </div>
             <div class="col-md-7 col-sm-8">
 	            <h4>冯怡鸥，鸥鸥</h4>
@@ -110,7 +110,7 @@
 
         <div class="row">
             <div class="col-md-3 col-md-offset-1 col-sm-4">
-            	<img class="round-corner" src="img/avatar/huangdaxia.jpg">
+            	<img class="round-corner" src="/img/avatar/huangdaxia.jpg">
             </div>
             <div class="col-md-7 col-sm-8">
             	<h4>黄大虾</h4>
@@ -123,7 +123,7 @@
 
         <div class="row">
             <div class="col-md-3 col-md-offset-1 col-sm-4">
-            	<img class="round-corner" src="img/avatar/louis.jpg">
+            	<img class="round-corner" src="/img/avatar/louis.jpg">
             </div>
             <div class="col-md-7 col-sm-8">
             	<h4>Louis Palmer</h4>
@@ -132,7 +132,7 @@
         </div>
         <div class="row">
             <div class="col-md-3 col-md-offset-1 col-sm-4">
-            	<img class="round-corner" src="img/avatar/yang.png">
+            	<img class="round-corner" src="/img/avatar/yang.png">
             </div>
             <div class="col-md-7 col-sm-8">
             	<h4>杨锦屏</h4>
@@ -141,7 +141,7 @@
         </div>
         <div class="row">
             <div class="col-md-3 col-md-offset-1 col-sm-4">
-            	<img class="round-corner" src="img/avatar/louis.jpg">
+            	<img class="round-corner" src="/img/avatar/louis.jpg">
             </div>
             <div class="col-md-7 col-sm-8">
             	<h4>李春雷</h4>
