--- a/template/luzern.html
+++ b/template/luzern.html
@@ -1,14 +1,13 @@
+ <header class="sub-header" style="background-image: url('/img/header.jpg');">
+    <div class="header-content">
+        <div class="header-content-inner">
 
-    <header class="sub-header">
-        <div class="header-content">
-            <div class="header-content-inner">
-
-                <h1>琉森，瑞士最美城市</h1>
-                <hr>
-                <p>半日、一日、两日。亲子游私家团 ​</p>
-                <a href="#about" class="btn btn-primary btn-xl page-scroll btn-action">立即报名</a>
-            </div>
+            <h1>琉森，瑞士最美城市</h1>
+            <hr>
+            <p>半日、一日、两日。亲子游私家团 ​</p>
+            <a href="#about" class="btn btn-primary btn-xl page-scroll btn-action">立即报名</a>
         </div>
-    </header>
+    </div>
+</header>
 
 
