--- a/template/2016summer.html
+++ b/template/2016summer.html
@@ -1,4 +1,4 @@
-<header class="sub-header">
+<header class="sub-header" style="background-image: url('/img/header.jpg');">
     <div class="header-content">
         <div class="header-content-inner">
             <h1>瑞士Central深度8天7晚·Babymosh亲子共游</h1>
@@ -8,7 +8,7 @@
     </div>
 </header>
 
-<section class="img-bg no-padding" style="background-image: url('img/index/slow.png')">
+<section class="/img-bg no-padding" style="background-image: url('/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
@@ -56,7 +56,7 @@
         </div>
 </section>
 
-<section class="img-bg no-padding" style="background-image: url('img/index/slow.png')">
+<section class="/img-bg no-padding" style="background-image: url('/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
@@ -96,7 +96,7 @@
         </div>
 </section>
 
-<section class="img-bg no-padding" style="background-image: url('img/index/slow.png')">
+<section class="/img-bg no-padding" style="background-image: url('/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
@@ -116,7 +116,7 @@
         </div>
 </section>
 
-<section class="img-bg no-padding" style="background-image: url('img/index/slow.png')">
+<section class="/img-bg no-padding" style="background-image: url('/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
@@ -130,13 +130,13 @@
 		<div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-					<img src="img/2016summer/timetable.png" class="img-responsive">
+					<img src="/img/2016summer/timetable.png" class="/img-responsive">
                 </div>
             </div>
         </div>
 </section>
 
-<section class="img-bg no-padding" style="background-image: url('img/index/slow.png')">
+<section class="/img-bg no-padding" style="background-image: url('/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
