fix bug, change blog url

--- a/template/2016summer.html
+++ b/template/2016summer.html
@@ -130,7 +130,7 @@
 		<div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-					<img src="/img/2016summer/timetable.png" class="/img-responsive">
+					<img src="/img/2016summer/timetable.png" class="img-responsive">
                 </div>
             </div>
         </div>
