--- a/template/2016summer.html
+++ b/template/2016summer.html
@@ -8,7 +8,7 @@
     </div>
 </header>
 
-<section class="/img-bg no-padding" style="background-image: url('/img/index/slow.png')">
+<section class="img-bg no-padding" style="background-image: url('/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
@@ -56,7 +56,7 @@
         </div>
 </section>
 
-<section class="/img-bg no-padding" style="background-image: url('/img/index/slow.png')">
+<section class="img-bg no-padding" style="background-image: url('/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
@@ -96,7 +96,7 @@
         </div>
 </section>
 
-<section class="/img-bg no-padding" style="background-image: url('/img/index/slow.png')">
+<section class="img-bg no-padding" style="background-image: url('/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
@@ -116,7 +116,7 @@
         </div>
 </section>
 
-<section class="/img-bg no-padding" style="background-image: url('/img/index/slow.png')">
+<section class="img-bg no-padding" style="background-image: url('/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
@@ -136,7 +136,7 @@
         </div>
 </section>
 
-<section class="/img-bg no-padding" style="background-image: url('/img/index/slow.png')">
+<section class="img-bg no-padding" style="background-image: url('/img/index/slow.png')">
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-6 col-lg-offset-2 full-block">
